--- a/editdetails.ui
+++ b/editdetails.ui
@@ -89,6 +89,12 @@ QWidget {background-color: white}
        </item>
        <item alignment="Qt::AlignRight|Qt::AlignTop">
         <widget class="QPushButton" name="pushButton">
+         <property name="maximumSize">
+          <size>
+           <width>120</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>Logout</string>
          </property>
@@ -101,6 +107,12 @@ QWidget {background-color: white}
      </item>
      <item alignment="Qt::AlignLeft|Qt::AlignTop">
       <widget class="QPushButton" name="pushButton_2">
+       <property name="maximumSize">
+        <size>
+         <width>80</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="text">
         <string>Back</string>
        </property>
