--- a/userprofile.ui
+++ b/userprofile.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>842</width>
-    <height>569</height>
+    <width>1082</width>
+    <height>775</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,19 +20,6 @@ QWidget {background-color: rgb(255, 255, 255)}
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
      <property name="verticalSpacing">
       <number>12</number>
@@ -150,7 +137,8 @@ QWidget {background-color: rgb(255, 255, 255)}
         <string>Logout</string>
        </property>
        <property name="icon">
-        <iconset theme="system-shutdown"/>
+        <iconset theme="system-shutdown">
+         <normaloff>.</normaloff>.</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -192,14 +180,27 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
-     <item row="7" column="2" alignment="Qt::AlignRight">
-      <widget class="QPushButton" name="lockButton">
-       <property name="text">
-        <string>🔒 Lock</string>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item row="3" column="0" alignment="Qt::AlignRight|Qt::AlignBottom">
+    <widget class="QPushButton" name="lockButton">
+     <property name="text">
+      <string>🔒 Lock</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
