--- a/editdetails.ui
+++ b/editdetails.ui
@@ -41,7 +41,7 @@ QWidget {background-color: white}
       </spacer>
      </item>
      <item row="0" column="2" alignment="Qt::AlignRight|Qt::AlignTop">
-      <widget class="QWidget" name="" native="true">
+      <widget class="QWidget" name="widget" native="true">
        <property name="minimumSize">
         <size>
          <width>250</width>
@@ -81,14 +81,14 @@ QWidget {background-color: white}
       </widget>
      </item>
      <item row="4" column="0" colspan="3" alignment="Qt::AlignHCenter">
-      <widget class="QWidget" name="" native="true">
+      <widget class="QWidget" name="widget" native="true">
        <property name="minimumSize">
         <size>
          <width>450</width>
          <height>300</height>
         </size>
        </property>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>1</x>
@@ -336,7 +336,8 @@ QWidget {background-color: white}
       <string>Save</string>
      </property>
      <property name="icon">
-      <iconset theme="document-save"/>
+      <iconset theme="document-save">
+       <normaloff>.</normaloff>.</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -345,6 +346,19 @@ QWidget {background-color: white}
       </size>
      </property>
     </widget>
+   </item>
+   <item row="1" column="0">
+    <spacer name="verticalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
