--- a/cart.ui
+++ b/cart.ui
@@ -94,9 +94,6 @@ QWidget {background-color: white}
      </item>
      <item row="2" column="2">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="7" column="1">
-        <widget class="QSpinBox" name="spinBox"/>
-       </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
          <property name="font">
@@ -134,13 +131,6 @@ QWidget {background-color: white}
          </property>
          <property name="text">
           <string>RFID:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="QPushButton" name="pushButton">
-         <property name="text">
-          <string>Remove From Cart</string>
          </property>
         </widget>
        </item>
@@ -190,7 +180,7 @@ QWidget {background-color: white}
           </font>
          </property>
          <property name="text">
-          <string>5</string>
+          <string>2</string>
          </property>
         </widget>
        </item>
@@ -264,7 +254,14 @@ QWidget {background-color: white}
           </font>
          </property>
          <property name="text">
-          <string>Available Quantity:</string>
+          <string>Quantity:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0" colspan="2">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Remove From Cart</string>
          </property>
         </widget>
        </item>
