--- a/inventory.ui
+++ b/inventory.ui
@@ -233,7 +233,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
+        <item row="8" column="0" colspan="2">
          <spacer name="verticalSpacer_4">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -308,6 +308,29 @@ QWidget {background-color: white}
           <width>400</width>
           <height>350</height>
          </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+         </font>
+        </property>
+        <property name="mouseTracking">
+         <bool>false</bool>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Sunken</enum>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
+        <property name="headerHidden">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
