--- a/editdetails.ui
+++ b/editdetails.ui
@@ -46,7 +46,7 @@ QWidget {background-color: white}
         </property>
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="1">
-          <widget class="QTextEdit" name="textEdit">
+          <widget class="QTextEdit" name="name">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -91,7 +91,7 @@ QWidget {background-color: white}
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QTextEdit" name="textEdit_2">
+          <widget class="QTextEdit" name="phoneCall">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -133,7 +133,7 @@ QWidget {background-color: white}
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QTextEdit" name="textEdit_3">
+          <widget class="QTextEdit" name="phoneWhatsApp">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -162,7 +162,7 @@ QWidget {background-color: white}
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QTextEdit" name="textEdit_4">
+          <widget class="QTextEdit" name="roomNumber">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -178,7 +178,7 @@ QWidget {background-color: white}
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QTextEdit" name="textEdit_5">
+          <widget class="QTextEdit" name="email">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
              <horstretch>0</horstretch>
